FileBrowser/CodeMirror integration